--- a/EscamBall/src/Visao/CadastroJogador.form
+++ b/EscamBall/src/Visao/CadastroJogador.form
@@ -14,7 +14,7 @@
         </constraints>
         <properties>
           <font size="16"/>
-          <text value="Novo Controladores.Controladores.Jogador&#10;"/>
+          <text value="Novo Jogador "/>
         </properties>
       </component>
       <vspacer id="860e3">
@@ -27,7 +27,7 @@
           <grid row="0" column="1" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="42487" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="42487" class="javax.swing.JTextField" binding="Nome">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -35,7 +35,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="99220" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="99220" class="javax.swing.JTextField" binding="Idade">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -43,7 +43,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="a831" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="a831" class="javax.swing.JTextField" binding="Preco">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -51,7 +51,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="b3e72" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="b3e72" class="javax.swing.JComboBox" binding="Posicao">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -64,7 +64,7 @@
           </model>
         </properties>
       </component>
-      <component id="2ba56" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+      <component id="2ba56" class="javax.swing.JTextField" binding="Ataque">
         <constraints>
           <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -72,7 +72,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="85598" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+      <component id="85598" class="javax.swing.JTextField" binding="Fisico">
         <constraints>
           <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -148,7 +148,7 @@
           <text value="Atributos"/>
         </properties>
       </component>
-      <component id="3816c" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="3816c" class="javax.swing.JTextField" binding="Defesa">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
